force-app/main/default/objects/Component__c/fields/Figlio__c.field-meta.xml
<CustomField>
    <fullName>Figlio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Figlio</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Component (Figlio)</relationshipLabel>
    <relationshipName>Component1</relationshipName>
    <type>Lookup</type>
</CustomField>