force-app/main/default/objects/Component__c/fields/Figlio_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Figlio_Product_Description__c</fullName>
    <formula>Figlio__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Figlio Product Description</label>
    <type>Text</type>
</CustomField>