force-app/main/default/objects/Component__c/fields/Livello__c.field-meta.xml
<CustomField>
    <fullName>Livello__c</fullName>
    <label>Livello</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>