force-app/main/default/objects/Component__c/fields/Padre__c.field-meta.xml
<CustomField>
    <fullName>Padre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Padre</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Component</relationshipLabel>
    <relationshipName>Component</relationshipName>
    <type>Lookup</type>
</CustomField>